update about me

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 <body>
     <header>
         <div class="container">
-            <h1>Welcome to My Website</h1>
-            <p>A brief introduction about me.</p>
+            <h1>Edwin Thiel's Website</h1>
+            <p>A System Administrator with diverse experience, working in various roles and leading impactful projects across different organizations..</p>
         </div>
     </header>
 
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>Hello! I'm [Your Name], a [Your Role/Profession]. I specialize in [Your Skills/Expertise]. Welcome to my personal space on the web!</p>
+            <p>Hello! I'm Edwin Thiel, an IT Profesional / Web developer / Code as Hobbie.
+                Welcome to my personal space on the web!</p>
         </div>
     </section>
 
