--- a/index.html
+++ b/index.html
@@ -10,15 +10,29 @@
     <header>
         <div class="container">
             <h1>Edwin Thiel's Website</h1>
-            <p>A System Administrator with diverse experience, working in various roles and leading impactful projects across different organizations..</p>
+            <p>A IT Profesional / Web Developer with diverse experience, working in various roles and leading impactful projects across different organizations..</p>
         </div>
     </header>
 
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>Hello! I'm Edwin Thiel, an IT Profesional / Web developer / Code as Hobbie.
-                Welcome to my personal space on the web!</p>
+            <p>Hello! I'm Edwin Thiel, an IT Profesional. Welcome to my personal space on the web!</p>
+        <h3>Skills and Expertise</h3>
+        <ul>
+            <li><strong>Modern Workplace Support:</strong> Experience implementing and supporting modern workplace environments, leveraging tools like Azure and Office 365.</li>
+            <li><strong>Network Infrastructure:</strong> Design, implementation, and maintenance of hardware firewalls, VLANs, and VPNs.</li>
+            <li><strong>Virtualization:</strong> Expertise in VMware, Microsoft Hyper-V, and Azure environments.</li>
+            <li><strong>Communication Systems:</strong> PBX migrations, VoIP setups, and remote user connectivity.</li>
+            <li><strong>Basic Coding and Web Development:</strong> Experience with HTML, CSS, and JavaScript, demonstrated by:
+                <ul>
+                    <li>Building and managing this mkdocs-based site.</li>
+                    <li>Registering a domain, configuring Cloudflare, and using Git for version control.</li>
+                </ul>
+            </li>
+            <li><strong>Linux Proficiency:</strong> Basic knowledge of Linux systems, including troubleshooting, configuration, and command-line operations.</li>
+            <li><strong>IT Administration:</strong> Day-to-day IT operations, project support, and team management.</li>
+        </ul>
         </div>
     </section>
 
