update footer and css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -56,9 +57,15 @@
         <div class="container">
             <p>Connect with me:</p>
             <div class="social-links">
-                <a href="https://github.com/yourgithub" target="_blank">GitHub</a> |
-                <a href="https://linkedin.com/in/yourlinkedin" target="_blank">LinkedIn</a> |
-                <a href="https://twitter.com/yourtwitter" target="_blank">X</a>
+                <a href="https://github.com/thiel3" target="_blank" aria-label="GitHub">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/edwin-thiel-316764245/" target="_blank" aria-label="LinkedIn">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://x.com/Ed_Thiel" target="_blank" aria-label="Twitter">
+                    <i class="fab fa-twitter"></i>
+                </a>
             </div>
         </div>
     </footer>
