update profile pic html css and add img folder

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- START WELCOME SECTION -->
 
     <section id="welcome-section" class="welcome-section">
+    <img src="/img/Ed_Profile.jpg" alt="Edwin Thiel" class="profile-pic">
       <h1>Hey I am Edwin</h1>
       <p>a web developer / sys admin</p>
     </section>
