--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Edwin Thiel's portfolio site" />
+    <meta
+      name="keywords"
+      content="web developer, sys admin, Edwin Thiel" />
+    <title>Edwin Thiel</title>   
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
       crossorigin="anonymous" referrerpolicy="no-referrer" />
