--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta
       name="keywords"
       content="web developer, sys admin, Edwin Thiel" />
-    <title>Edwin Thiel</title>   
+    <title>Edwin Thiel's portfolio site</title>
+    <link rel="icon" type="image/png" href="favicon.png">  
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
       crossorigin="anonymous" referrerpolicy="no-referrer" />
