--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       name="keywords"
       content="web developer, sys admin, Edwin Thiel" />
     <title>Edwin Thiel's portfolio site</title>
-    <link rel="icon" type="image/png" href="favicon.png">  
+    <link rel="icon" type="image/png" href="/img/favicon.png">  
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
       crossorigin="anonymous" referrerpolicy="no-referrer" />
